--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                   <div class="u-container-layout u-container-layout-4">
                     <h5 class="u-custom-font u-font-titillium-web u-text u-text-default u-text-white u-text-7">Q2</h5>
                     <ul class="u-custom-font u-font-titillium-web u-text u-text-8">
-                      <li>Creat Euforium Locker</li>
+                      <li>Create Euforium Locker</li>
                       <li>Partner with big influencer</li>
                       <li>250+ Holders</li>
                       <li>More Marketing</li>
@@ -265,7 +265,7 @@
                     <ul class="u-custom-font u-font-titillium-web u-text u-text-14">
                       <li>Euforium Bridge Created</li>
                       <li>Apply Euforium to any CEX</li>
-                      <li>Creat Euforium Mainnet</li>
+                      <li>Create Euforium Mainnet</li>
                       <li>Euforium Mainnet Live</li>
                       <li>More roadmap coming..</li>
                     </ul>
