--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-custom-font u-font-titillium-web u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-white" href="index.html#" style="padding: 10px 20px;">Careers</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-white" href="https://" style="padding: 10px 20px;">Whitepaper</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-white" href="index.html#" style="padding: 10px 20px;">Social</a><div class="u-nav-popup"><ul class="u-custom-font u-font-titillium-web u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="https://t.me/GybsLabs">Telegram</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-white" href="index.html#" style="padding: 10px 20px;">Social</a><div class="u-nav-popup"><ul class="u-custom-font u-font-titillium-web u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="https://t.me/euforium_ch">Telegram</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="https://twitter.com/">Twitter</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="https://medium.com/">Medium</a>
 </li></ul>
@@ -58,7 +58,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html#">Careers</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://">Whitepaper</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html#">Social</a><div class="u-nav-popup"><ul class="u-custom-font u-font-titillium-web u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/GybsLabs">Telegram</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html#">Social</a><div class="u-nav-popup"><ul class="u-custom-font u-font-titillium-web u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/euforium_ch">Telegram</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://twitter.com/">Twitter</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://medium.com/">Medium</a>
 </li></ul>
