--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-valign-top u-container-layout-1">
                   <h3 class="u-custom-font u-font-titillium-web u-text u-text-default u-text-1"> A revolutionary decentralized token and DApp ecosystem built on the Binance Smartchain blockchain.</h3>
-                  <p class="u-custom-font u-font-titillium-web u-text u-text-default u-text-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima odio molestiae minus temporibus accusamus. Id nesciunt natus quibusdam fuga commodi dignissimos assumenda dolores, molestiae atque alias neque, eum veritatis eaque.</p>
+                  <p class="u-custom-font u-font-titillium-web u-text u-text-default u-text-2"> EUFORIUM is a project that seeks to tackle the challenges present in the current decentralized finance (DeFi) landscape. DeFi has been recognized as a groundbreaking development within the blockchain industry, providing users with transparent, permissionless, and borderless financial services. However, several obstacles hinder its widespread adoption, including liquidity fragmentation, limited interoperability, and complex user experiences.
+                    <br>
+                    EUFORIUM aims to overcome these challenges by offering an all-in-one solution on the Binance Smart Chain (BSC) blockchain. The project provides a decentralized exchange (DEX) and a decentralized application (Dapp) ecosystem, combining various DeFi functionalities into a cohesive platform. By doing so, EUFORIUM aims to enhance liquidity, promote interoperability, and simplify user experiences.</p>
                   <a href="index.html#" class="u-border-none u-btn u-button-style u-custom-font u-font-titillium-web u-grey-10 u-hover-white u-btn-1">JOIN </a>
                 </div>
               </div>
@@ -135,7 +137,7 @@
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
                   <h3 class="u-custom-font u-font-titillium-web u-text u-text-default u-text-1">Overview</h3>
-                  <p class="u-custom-font u-font-titillium-web u-text u-text-default u-text-2"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos voluptas deleniti amet fugit ea, accusantium dicta eum pariatur adipisci eaque consequuntur vitae iusto culpa cumque nostrum non eius explicabo accusamus.</p>
+                  <p class="u-custom-font u-font-titillium-web u-text u-text-default u-text-2"> In summary, EUFORIUM aims to revolutionize the DeFi landscape by addressing liquidity fragmentation, limited interoperability, and complex user experiences. By providing an all-in-one decentralized exchange and Dapp ecosystem on the Binance Smart Chain, EUFORIUM seeks to offer a comprehensive solution that empowers users to access and utilize decentralized financial services more efficiently and effectively</p>
                 </div>
               </div>
             </div>
