--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <section class="u-clearfix u-custom-color-1 u-section-3" id="sec-7ba4">
       <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-custom-font u-font-titillium-web u-text u-text-default u-text-1"> We never stop looking!</p>
-        <h2 class="u-custom-font u-font-titillium-web u-text u-text-2"> Join the team pushing the limits of the decentralized web.</h2>
+        <h2 class="u-custom-font u-font-titillium-web u-text u-text-2"> Become part of the group that is actively pushing the boundaries of the decentralized web.</h2>
       </div>
     </section>
     <section class="u-clearfix u-section-4" id="sec-c7b0">
