--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html#">Careers</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://">Whitepaper</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html#">Social</a><div class="u-nav-popup"><ul class="u-custom-font u-font-titillium-web u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/euforium_ch">Telegram</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://twitter.com/">Twitter</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://twitter.com/EuforiumNet">Twitter</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://medium.com/">Medium</a>
 </li></ul>
 </div>
